--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
     "build": "tsc",
     "start": "node dist/index.js"
   },
-  "keywords": ["express", "typescript", "refactoring", "exercise"],
+  "keywords": [
+    "express",
+    "typescript",
+    "refactoring",
+    "exercise"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
